--- a/_posts/2016-08-30-power-ups.md
+++ b/_posts/2016-08-30-power-ups.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Power Ups"
 description: "Recursos autoaprendizaje"
+categories: [conocimiento libre]
 tags: [conocimiento libre]
 ---
 
